# rewinder

./: LICENSE  README.md  setup.cfg
rewinder/: __init__.py  core.py  kinematicdata.py  likelihood.pyx  potential.py  py_likelihood.py  setup_package.py  streamcomponent.py
rewinder/coordinates/: __init__.py  gal_hel.pyx  setup_package.py
rewinder/coordinates/tests/: test_gal_hel.py
scripts/: draw-pgm.py
