[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = rewinder
description = Rewinding stellar streams
long_description = Measure the Galactic potential with stellar streams.
author = Adrian Price-Whelan
author_email = adrn@astro.columbia.edu
license = MIT
url = http://adrian.pw/rewinder
edit_on_github = False
github_project = adrn/rewinder

[entry_points]
astropy-package-template-example = rewinder.example_mod:main